--- a/.github/workflows/submodule-auto-update.yml
+++ b/.github/workflows/submodule-auto-update.yml
@@ -35,4 +35,4 @@ jobs:
           git config --global user.name 'Git bot'
           git config --global user.email 'bot@noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
-          git commit -am "Update submodules" && git push || echo "No changes to commit"
+          git commit -am "Update submodules" && git push origin main || echo "No changes to commit"
