--- a/.github/workflows/submodule-auto-update.yml
+++ b/.github/workflows/submodule-auto-update.yml
@@ -8,7 +8,7 @@ on:
   push:
     branches: [ main ]
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 0-23 * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
